fix contast and visibility of skip link

--- a/CSS-week4-HW3-final/css/style.css
+++ b/CSS-week4-HW3-final/css/style.css
@@ -73,26 +73,22 @@ a:focus{
 
 /* skip link styles */
 .skip-link{
-    position: fixed;
-    z-index: 100;
-    top: 1rem;
-    left: 0;
     white-space: nowrap;
     font-weight: bolder;
 }
 .skip-link a{
-    display: block;
-    opacity: 0;
+    display: inline-block;
+    position: absolute;
+    top: -100px;
+    left: 0;
+    margin: 5px 0;
     padding: 0.25rem 0.5rem;
     border: 2px solid #fff;
-    background-color: #198754;
-    color: #fff;
-    transform: translateX(-100%);
-    transition: all 0.3s ease-in-out;
+    color: black;
+    transition: none;
 }
 .skip-link a:focus{
-    opacity: 1;
-    transform: translateX(0);
+    position: static;
 }
 
 
